syntax = "proto3";

package services.cache;

import "services.proto";

service CacheService {
  rpc query (Query) returns (QueryResult) {}

  rpc getStatus (Empty) returns (Status) {}

  rpc push (CMessage) returns (Empty) {}

  rpc newService (ServiceInfo) returns (Empty) {}

  rpc removeService (ServiceInfo) returns (Empty) {}
}

message CMessage {
  string message = 1;
  int64 time = 2;
}

message Query {
  string method = 1;
  string message = 2;
}

message QueryResult {
  string message = 1;
}