syntax = "proto3";

package gateway;

service GatewayService {

  rpc getStatus (Empty) returns (Status) {}
}

message Empty {}

message Status {
  string message = 1;
}